# Life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Cells.cpp  Cells.h  Window.cpp  Window.h  main.cpp
src/life/: Cells.cpp  Cells.h
tests/: CMakeLists.txt  catch.hpp  test.cpp  testCells.cpp
